# 42-ft_linear_regression

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  pyproject.toml
ressource/: basic.csv
ressource/err/: empty_line.csv  missing_x.csv  missing_y.csv  str.csv  too_few.csv  unequal.csv
src/: estimate.rs
src/load/: Cargo.toml
src/load/src/: lib.rs
src/model/: Cargo.toml
src/model/src/: lib.rs
src/predict/: Cargo.toml
src/predict/src/: arg.rs  main.rs
src/train/: Cargo.toml  arg.rs  learn.rs  load.rs  main.py  main.rs
src/train/src/: arg.rs  compute.rs  graph.rs  learn.rs  main.rs  table.rs
src/train/src/compute/: analyze.rs  mod.rs  normalize.rs
src/train/src/graph/: const.rs  coord.rs  draw.rs  mod.rs  result.rs  training.rs
src/train/src/prepare/: analyze.rs  diff.rs  mod.rs  normalize.rs
