[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "estimate"
path = "src/estimate.rs"

[[bin]]
name = "train"
path = "src/train/main.rs"

[dependencies]
ansi = { git = "https://github.com/Alexdelia/yahmrslib.git" }
hmerr = { git = "https://github.com/Alexdelia/yahmrslib.git" }
csv = "1.3.0"
