[tool.poetry]
name = "ft-linear-regression"
version = "0.1.0"
description = "program that predicts the price of a car by using a linear function train with a gradient descent algorithm"
authors = ["adelille <adelille@student.42.fr>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
